# bnc-scraper

./: Cargo.toml  README.md
src/: app.rs  config.rs  lib.rs  main.rs  run.rs
src/core/: config.rs  logging.rs  mod.rs
src/core/bnc/: config.rs  data.rs  error.rs  mod.rs  rest.rs  snapshot.rs  state.rs
src/core/bnc/state/: balancer.rs  book.rs  mod.rs  price.rs
src/core/bnc/ws/: config.rs  data.rs  master.rs  mod.rs  worker.rs
src/core/bnc/ws/worker/: depth.rs  mod.rs  price.rs
src/ui/: config.rs  mod.rs  runner.rs
