[package]
name = "bnc-scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
# For config and binance entities.
serde = "1"
serde_json = "1"

# Binance API interactions - e.g. parsing initial snapshots.
reqwest = { version = "0.11", features = ["json"] }

# Pretty simple crate for the configuration purposes.
config = "0.13"

# Logging dependencies, log for library part, fern(logging implementation) for binary.
log = { version = "0.4", features = ["serde"] }
fern = "0.6"
chrono = "0.4"

# I prefer to use this tiny library to encapsulate some internal things and provide quick functional-style access to the fields.
derive-getters = "0.2"
