[package]
name = "bnc-scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
# For config and binance entities.
serde = "1"
serde_json = "1"

# Binance API interactions - e.g. parsing initial snapshots.
reqwest = { version = "0.11", features = ["json"] }

# Pretty simple crate for the configuration purposes.
config = "0.13"

# Logging dependencies, log for library part, fern(logging implementation) for binary.
log = { version = "0.4", features = ["serde"] }
fern = "0.6"
chrono = "0.4"

# I prefer to use this tiny library to encapsulate some internal things and provide quick functional-style access to the fields.
derive-getters = "0.2"

# As we are to make application pluggable and implementation-agnostic, this is required.
async-trait = "0.1"

# To write custom error types.
thiserror = "1.0"
anyhow = "1.0"

# Async machine.
tokio = { version = "1.20", features = ["full"] }
futures = "0.3"
futures-util = "0.3"

# Websocket connections.
tokio-tungstenite = { version = "0.17", features = ["native-tls"] }
